deploy: c37656a8bbe32abb46389839dc8dd33a4ce4a7a8

--- a/aboutus/iannace/index.html
+++ b/aboutus/iannace/index.html
@@ -2,12 +2,12 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="ie=edge">
-<title> - Team Faraday</title>
+<title>Abhinav Arya - Team Faraday</title>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <link rel=icon href=https://teamfaraday.github.io/favicon.png>
 <link rel=stylesheet href=/css/style.min.7597906e4f51b73e547c5c17b524d0e4ef48f57dc6670dd371f46a781f7ae7a5.css>
 </head>
-<body class="page page-contact">
+<body class=page>
 <div id=main-menu-mobile class=main-menu-mobile>
 <ul>
 <li class="menu-item-about us">
@@ -62,24 +62,16 @@
 </button>
 </div>
 </div>
-<div class="intro intro-small">
 <div class=container>
-<div class=row>
-<div class=col-12>
-<h1></h1>
+<div class="row justify-content-center">
+<div class="col-12 col-md-9">
+<h1>Abhinav Arya</h1>
+Monday, Jan 1, 0001
+<div class=content>
+<h2 id=michael-iannace>Michael Iannace</h2>
+<p><em>Advisor</em></p>
+<p>Mr. Iannace is an auto shop teacher at Edison High School, and has immensely helped us. He has given us access to power tools, given us new parts, and has provided advice regarding hardware.</p>
 </div>
-</div>
-</div>
-</div>
-<div class=container>
-<div class=row>
-<div class="col-12 col-md-8">
-<p>Here is our contact information.</p>
-<ul>
-<li><strong>School Mailing Address: </strong>Insert Mailing Address</li>
-<li><strong>Team Email: </strong><a href=mailto:devammondal06@gmail.com>
-test</a></li>
-</ul>
 </div>
 </div>
 </div>
