deploy: 922bc56f363dd3f02caba705334d8dbded90b697

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 <span>Contact Us</span>
 </a>
 </li>
-<li class=menu-item-resources>
-<a href=/resource/>
-<span>Resources</span>
+<li class="menu-item-robot images">
+<a href=/robotimages/>
+<span>Robot Images</span>
 </a>
 </li>
 </ul>
@@ -58,9 +58,9 @@
 <span>Contact Us</span>
 </a>
 </li>
-<li class=menu-item-resources>
-<a href=/resource/>
-<span>Resources</span>
+<li class="menu-item-robot images">
+<a href=/robotimages/>
+<span>Robot Images</span>
 </a>
 </li>
 </ul>
