--- a/robotimages/index.html
+++ b/robotimages/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="ie=edge">
-<title>Resources - Team Faraday</title>
+<title>Images - Team Faraday</title>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <link rel=icon href=https://teamfaraday.github.io/favicon.png>
 <link rel=stylesheet href=/css/style.min.7597906e4f51b73e547c5c17b524d0e4ef48f57dc6670dd371f46a781f7ae7a5.css>
@@ -20,9 +20,9 @@
 <span>Contact Us</span>
 </a>
 </li>
-<li class=menu-item-resources>
-<a href=/resource/>
-<span>Resources</span>
+<li class="menu-item-robot images">
+<a href=/robotimages/>
+<span>Robot Images</span>
 </a>
 </li>
 </ul>
@@ -48,9 +48,9 @@
 <span>Contact Us</span>
 </a>
 </li>
-<li class=menu-item-resources>
-<a href=/resource/>
-<span>Resources</span>
+<li class="menu-item-robot images">
+<a href=/robotimages/>
+<span>Robot Images</span>
 </a>
 </li>
 </ul>
@@ -65,9 +65,10 @@
 <div class="container pt-10 pb-6">
 <div class=row>
 <div class=col-12>
-<h1 class="title-1 black">Resources</h1>
-<p>Here are some resources relating to our robot</p>
-<p>Insert resources for later</p>
+<h1 class="title-1 black">Images</h1>
+<p>Here are some images of our robot!</p>
+<p><img src=/img/combinedrobot1.jpg alt=robot>
+<img src=/img/combinedrobot2.jpg alt=robot2>&lt;/image?</p>
 </div>
 </div>
 </div>
