deploy: 4b6346c5195569648080182f77da2f0276c518dc

--- a/robotimages/index.html
+++ b/robotimages/index.html
@@ -68,7 +68,7 @@
 <h1 class="title-1 black">Images</h1>
 <p>Here are some images of our robot!</p>
 <p><img src=/img/combinedrobot1.jpg alt=robot>
-<img src=/img/combinedrobot2.jpg alt=robot2>&lt;/image?</p>
+<img src=/img/combinedrobot2.jpg alt=robot2></p>
 </div>
 </div>
 </div>
