--- a/aboutus/ishan/index.html
+++ b/aboutus/ishan/index.html
@@ -5,7 +5,7 @@
 <title>Who are we? - Team Faraday</title>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <link rel=icon href=https://teamfaraday.github.io/favicon.png>
-<link rel=stylesheet href=/css/style.min.7597906e4f51b73e547c5c17b524d0e4ef48f57dc6670dd371f46a781f7ae7a5.css>
+<link rel=stylesheet href=/css/style.min.974bfc99d318e2de87ea38581bb5743ace6f0d4a0fb39ffc899fcca89d07b405.css>
 </head>
 <body class=page>
 <div id=main-menu-mobile class=main-menu-mobile>
@@ -15,9 +15,9 @@
 <span>About Us</span>
 </a>
 </li>
-<li class="menu-item-contact us">
-<a href=/contact/>
-<span>Contact Us</span>
+<li class="menu-item-hype video">
+<a href=/video/>
+<span>Hype Video</span>
 </a>
 </li>
 <li class="menu-item-robot images">
@@ -36,6 +36,13 @@
 <div class=logo-mobile>
 <a href=https://teamfaraday.github.io/><img alt="Figurit Homepage" src=https://teamfaraday.github.io/images/logo-mobile.svg></a>
 </div>
+<link rel=apple-touch-icon sizes=180x180 href=/apple-touch-icon.png>
+<link rel=icon type=image/png sizes=32x32 href=/favicon-32x32.png>
+<link rel=icon type=image/png sizes=16x16 href=/favicon-16x16.png>
+<link rel=manifest href=/site.webmanifest>
+<link rel=mask-icon href=/safari-pinned-tab.svg color=#5bbad5>
+<meta name=msapplication-TileColor content="#da532c">
+<meta name=theme-color content="#ffffff">
 <div id=main-menu class=main-menu>
 <ul>
 <li class="menu-item-about us">
@@ -43,9 +50,9 @@
 <span>About Us</span>
 </a>
 </li>
-<li class="menu-item-contact us">
-<a href=/contact/>
-<span>Contact Us</span>
+<li class="menu-item-hype video">
+<a href=/video/>
+<span>Hype Video</span>
 </a>
 </li>
 <li class="menu-item-robot images">
