--- a/video/index.html
+++ b/video/index.html
@@ -2,12 +2,12 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="ie=edge">
-<title> - Team Faraday</title>
+<title>Video - Team Faraday</title>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <link rel=icon href=https://teamfaraday.github.io/favicon.png>
-<link rel=stylesheet href=/css/style.min.7597906e4f51b73e547c5c17b524d0e4ef48f57dc6670dd371f46a781f7ae7a5.css>
+<link rel=stylesheet href=/css/style.min.974bfc99d318e2de87ea38581bb5743ace6f0d4a0fb39ffc899fcca89d07b405.css>
 </head>
-<body class="page page-contact">
+<body class=page>
 <div id=main-menu-mobile class=main-menu-mobile>
 <ul>
 <li class="menu-item-about us">
@@ -15,9 +15,9 @@
 <span>About Us</span>
 </a>
 </li>
-<li class="menu-item-contact us">
-<a href=/contact/>
-<span>Contact Us</span>
+<li class="menu-item-hype video">
+<a href=/video/>
+<span>Hype Video</span>
 </a>
 </li>
 <li class="menu-item-robot images">
@@ -36,6 +36,13 @@
 <div class=logo-mobile>
 <a href=https://teamfaraday.github.io/><img alt="Figurit Homepage" src=https://teamfaraday.github.io/images/logo-mobile.svg></a>
 </div>
+<link rel=apple-touch-icon sizes=180x180 href=/apple-touch-icon.png>
+<link rel=icon type=image/png sizes=32x32 href=/favicon-32x32.png>
+<link rel=icon type=image/png sizes=16x16 href=/favicon-16x16.png>
+<link rel=manifest href=/site.webmanifest>
+<link rel=mask-icon href=/safari-pinned-tab.svg color=#5bbad5>
+<meta name=msapplication-TileColor content="#da532c">
+<meta name=theme-color content="#ffffff">
 <div id=main-menu class=main-menu>
 <ul>
 <li class="menu-item-about us">
@@ -43,9 +50,9 @@
 <span>About Us</span>
 </a>
 </li>
-<li class="menu-item-contact us">
-<a href=/contact/>
-<span>Contact Us</span>
+<li class="menu-item-hype video">
+<a href=/video/>
+<span>Hype Video</span>
 </a>
 </li>
 <li class="menu-item-robot images">
@@ -62,25 +69,19 @@
 </button>
 </div>
 </div>
-<div class="intro intro-small">
-<div class=container>
+<div class="container pt-10 pb-6">
 <div class=row>
 <div class=col-12>
-<h1></h1>
+<h1 class="title-1 black">Video</h1>
+<p>Here is our team&rsquo;s robot hype video!</p>
+<div style=position:relative;padding-bottom:56.25%;height:0;overflow:hidden>
+<iframe src=https://www.youtube.com/embed/nJZ0u0ZSoGQ style=position:absolute;top:0;left:0;width:100%;height:100%;border:0 allowfullscreen title="YouTube Video"></iframe>
 </div>
 </div>
 </div>
 </div>
-<div class=container>
+<div class="container pb-6">
 <div class=row>
-<div class="col-12 col-md-8">
-<p>Here is our contact information.</p>
-<ul>
-<li><strong>School Mailing Address: </strong>Insert Mailing Address</li>
-<li><strong>Team Email: </strong><a href=mailto:devammondal06@gmail.com>
-test</a></li>
-</ul>
-</div>
 </div>
 </div>
 </div>
